Test withput playingManager test

--- a/custom/index.html
+++ b/custom/index.html
@@ -260,10 +260,10 @@
 
         addToLog("play");
         
-        playerManager.play()
+        //playerManager.play()
 
 
-        addToLog("played");
+        //addToLog("played");
 
 
         /*
@@ -273,8 +273,8 @@
         });
         */
 
-        var sender = context.getSenders()
-        sender.forEach(printSender)
+        //var sender = context.getSenders()
+        //sender.forEach(printSender)
     }
 
     function printSender(item, index) {
