--- a/custom/index.html
+++ b/custom/index.html
@@ -23,7 +23,7 @@
         const channel = 'urn:x-cast:com.optm.anhplayer';
         const context = cast.framework.CastReceiverContext.getInstance();
         const playerManager = context.getPlayerManager();
-        const licenseServerUrl = "https://orangetv.orange.es/mob/api/rtv/v1/drm";
+        const licenseServerUrl = "https://orangetv.orange.es/stv/api/rtv/v1/drm";
         var cookies = [];
         var channel_external_id = ""
 
