Play in load method

--- a/custom/index.html
+++ b/custom/index.html
@@ -110,6 +110,7 @@
                 // Resolve entity to content id
 
 
+                playerManager.play()
                 /*
                 addToLog("----- LOAD ----- media: " + JSON.stringify(request.media));
 
