--- a/custom/index.html
+++ b/custom/index.html
@@ -104,6 +104,7 @@
             }
         );
 
+        
         playerManager.setMessageInterceptor(
             cast.framework.messages.MessageType.LOAD,
             request => {
@@ -171,6 +172,178 @@
                         }
                     }
                 }
+            }
+        );
+
+        /* For error code description */
+        /* event.detailedErrorCode: https://developers.google.com/cast/docs/reference/caf_receiver/cast.framework.events#.DetailedErrorCode */
+        /* mpl errors: https://developers.google.com/cast/docs/mpl_error_codes */
+        /* shaka errors: https://shaka-player-demo.appspot.com/docs/api/shaka.util.Error.html */
+        playerManager.addEventListener(cast.framework.events.EventType.ERROR,
+            event => {
+                var errorCodeAsStr = "";
+                var errorCodeExtentionAsStr = "";
+
+                switch (event.detailedErrorCode) {
+                    case cast.framework.events.DetailedErrorCode.MEDIA_UNKNOWN:
+                        errorCodeAsStr = "MEDIA_UNKNOWN";
+                        if ( (event.error !== undefined) && (event.error.shakaErrorCode !== undefined) )
+                            errorCodeExtentionAsStr = "ShakaPlayer error code = " + event.error.shakaErrorCode +
+                                                    " MediaError code from the video element = " + event.error.shakaErrorData[0] +
+                                                    " Description is " + event.error.shakaErrorData[2];
+
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIA_ABORTED:
+                        errorCodeAsStr = "MEDIA_ABORTED";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIA_DECODE:
+                        errorCodeAsStr = "MEDIA_DECODE";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIA_NETWORK:
+                        errorCodeAsStr = "MEDIA_NETWORK";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIA_SRC_NOT_SUPPORTED:
+                        errorCodeAsStr = "MEDIA_SRC_NOT_SUPPORTED";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.SOURCE_BUFFER_FAILURE:
+                        errorCodeAsStr = "SOURCE_BUFFER_FAILURE";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIAKEYS_UNKNOWN:
+                        errorCodeAsStr = "MEDIAKEYS_UNKNOWN";
+                        if ( (event.error !== undefined) && (event.error.shakaErrorCode !== undefined) )
+                            errorCodeExtentionAsStr = "ShakaPlayer error code = " + event.error.shakaErrorCode;
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIAKEYS_NETWORK:
+                        errorCodeAsStr = "MEDIAKEYS_NETWORK";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIAKEYS_UNSUPPORTED:
+                        errorCodeAsStr = "MEDIAKEYS_UNSUPPORTED";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIAKEYS_WEBCRYPTO:
+                        errorCodeAsStr = "MEDIAKEYS_WEBCRYPTO";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.NETWORK_UNKNOWN:
+                        errorCodeAsStr = "NETWORK_UNKNOWN";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.SEGMENT_NETWORK:
+                        errorCodeAsStr = "SEGMENT_NETWORK";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.HLS_NETWORK_MASTER_PLAYLIST:
+                        errorCodeAsStr = "HLS_NETWORK_MASTER_PLAYLIST";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.HLS_NETWORK_PLAYLIST:
+                        errorCodeAsStr = "HLS_NETWORK_PLAYLIST";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.HLS_NETWORK_NO_KEY_RESPONSE:
+                        errorCodeAsStr = "HLS_NETWORK_NO_KEY_RESPONSE";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.HLS_NETWORK_KEY_LOAD:
+                        errorCodeAsStr = "HLS_NETWORK_KEY_LOAD";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.HLS_NETWORK_INVALID_SEGMENT:
+                        errorCodeAsStr = "HLS_NETWORK_INVALID_SEGMENT";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.HLS_SEGMENT_PARSING:
+                        errorCodeAsStr = "HLS_SEGMENT_PARSING";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.DASH_NETWORK:
+                        errorCodeAsStr = "DASH_NETWORK";
+                        if ( (event.error !== undefined) && (event.error.shakaErrorCode !== undefined) )
+                            errorCodeExtentionAsStr = "ShakaPlayer error code = " + event.error.shakaErrorCode +
+                                " url = " + event.error.shakaErrorData[0];
+                        break;
+                    case cast.framework.events.DetailedErrorCode.DASH_NO_INIT:
+                        errorCodeAsStr = "DASH_NO_INIT";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.SMOOTH_NETWORK:
+                        errorCodeAsStr = "SMOOTH_NETWORK";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.SMOOTH_NO_MEDIA_DATA:
+                        errorCodeAsStr = "SMOOTH_NO_MEDIA_DATA";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MANIFEST_UNKNOWN:
+                        errorCodeAsStr = "MANIFEST_UNKNOWN";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.HLS_MANIFEST_MASTER:
+                        errorCodeAsStr = "HLS_MANIFEST_MASTER";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.HLS_MANIFEST_PLAYLIST:
+                        errorCodeAsStr = "HLS_MANIFEST_PLAYLIST";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.DASH_MANIFEST_UNKNOWN:
+                        errorCodeAsStr = "DASH_MANIFEST_UNKNOWN";
+                        if ( (event.error !== undefined) && (event.error.shakaErrorCode !== undefined) )
+                            errorCodeExtentionAsStr = "ShakaPlayer error code = " + event.error.shakaErrorCode;
+                        break;
+                    case cast.framework.events.DetailedErrorCode.DASH_MANIFEST_NO_PERIODS:
+                        errorCodeAsStr = "MEDIA_UNKNOWN";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIA_UNKNOWN:
+                        errorCodeAsStr = "DASH_MANIFEST_NO_PERIODS";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.DASH_MANIFEST_NO_MIMETYPE:
+                        errorCodeAsStr = "DASH_MANIFEST_NO_MIMETYPE";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.DASH_INVALID_SEGMENT_INFO:
+                        errorCodeAsStr = "DASH_INVALID_SEGMENT_INFO";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.SMOOTH_MANIFEST:
+                        errorCodeAsStr = "SMOOTH_MANIFEST";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.SEGMENT_UNKNOWN:
+                        errorCodeAsStr = "SEGMENT_UNKNOWN";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.TEXT_UNKNOWN:
+                        errorCodeAsStr = "TEXT_UNKNOWN";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.APP:
+                        errorCodeAsStr = "APP";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.BREAK_CLIP_LOADING_ERROR:
+                        errorCodeAsStr = "BREAK_CLIP_LOADING_ERROR";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.BREAK_SEEK_INTERCEPTOR_ERROR:
+                        errorCodeAsStr = "BREAK_SEEK_INTERCEPTOR_ERROR";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.IMAGE_ERROR:
+                        errorCodeAsStr = "IMAGE_ERROR";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.LOAD_INTERRUPTED:
+                        errorCodeAsStr = "LOAD_INTERRUPTED";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.LOAD_FAILED:
+                        errorCodeAsStr = "LOAD_FAILED";
+                        break;
+                    case cast.framework.events.DetailedErrorCode.MEDIA_ERROR_MESSAGE:
+                        errorCodeAsStr = "MEDIA_ERROR_MESSAGE";
+                        if (event.error.requestId !== undefined)
+                            console.log("error.requestId: " + event.error.requestId);
+                        if (event.error.type !== undefined)
+                            console.log("error.type: " + event.error.type);
+                        break;
+                    case cast.framework.events.DetailedErrorCode.GENERIC:
+                        errorCodeAsStr = "GENERIC";
+                        break;
+                    default:
+                        errorCodeAsStr = "Unexpected error code" ;
+                        break;
+
+                }
+                console.log("on ERROR: " + errorCodeAsStr + "(" + errorCodeExtentionAsStr + ")");
+
+                // report the error to the device
+                var errorMsg = {type: 'playbackerror'};
+                errorMsg.errorCode = event.detailedErrorCode;
+                errorMsg.errorCodeAsStr = errorCodeAsStr + ". " + errorCodeExtentionAsStr;
+                context.sendCustomMessage(SQP_COMMUNICATION_CHANNEL_URN,undefined,errorMsg);
+
+                // stop the player
+                if ( playerManager.getPlayerState() !== cast.framework.messages.PlayerState.IDLE ) {
+                    playerManager.stop();
+                }
+
+                // stop the session
+                context.stop();
             }
         );
 
