Try to log errors

--- a/custom/index.html
+++ b/custom/index.html
@@ -184,6 +184,9 @@
                 var errorCodeAsStr = "";
                 var errorCodeExtentionAsStr = "";
 
+                console.error("Error " + cast.framework.events.EventType.ERROR)
+                console.error("Error " + cast.framework.events.EventType.ERROR)
+
                 switch (event.detailedErrorCode) {
                     case cast.framework.events.DetailedErrorCode.MEDIA_UNKNOWN:
                         errorCodeAsStr = "MEDIA_UNKNOWN";
