Test with demo content

--- a/custom/index.html
+++ b/custom/index.html
@@ -24,7 +24,8 @@
         const channel = 'urn:x-cast:com.optm.anhplayer';
         const context = cast.framework.CastReceiverContext.getInstance();
         const playerManager = context.getPlayerManager();
-        const licenseServerUrl = "https://orangetv.orange.es/mob/api/rtv/v1/drm";
+        //const licenseServerUrl = "https://orangetv.orange.es/mob/api/rtv/v1/drm";
+        const licenseServerUrl = "https://manifest.prod.boltdns.net/license/v1/playready/4880098471001/d54a4485-67f7-4f1b-ad04-d9cf951da7d2/8345d6a1-87c1-4cd2-88cb-2d4b7c96277c?fastly_token=NWU3YTQ4NmJfMDVlNWVmOWYzNGE3NDE2OWJmY2FjNDI1MGFlNWQzNWE3ZGY1NTg1NzYyYmZjMjFhMjc0N2FlYTg3MWVmNTU4NQ%3D%3D";
         var cookies = [];
         var username = ""
         var password = ""
@@ -47,6 +48,7 @@
         // Update playback config licenseUrl according to provided value in load request.
         playerManager.setMediaPlaybackInfoHandler((loadRequest, playbackConfig) => {
 
+            debugger;
 
             addToLog("setMediaPlaybackInfoHandler - customData: " + JSON.stringify(loadRequest.media.customData));
 
@@ -89,6 +91,8 @@
         playerManager.addEventListener(cast.framework.events.EventType.PLAYER_LOAD_COMPLETE,
             event => {
 
+                debugger;
+
                 addToLog("on PLAYER_LOAD_COMPLETE: contentId " + event.media.contentId);
 
                 for (var i = 0; i < event.media.tracks.length; i++) {
@@ -125,6 +129,9 @@
                 */
 
                 if (request.media.entity && !request.media.contentId) {
+
+                    debugger;
+
                     addToLog("----- LOAD ----- contentId " + request.media.contentId);
                     return getMediaByEntity(request.media.entity).then(
                         media => {
@@ -143,6 +150,8 @@
 
         // A hook on the license request url
         playbackConfig.licenseRequestHandler = requestInfo => {
+            debugger;
+
             console.log("licenseRequestHandler: " + requestInfo.url);
             addToLog("licenseRequestHandler: " + requestInfo.url);
 
@@ -162,6 +171,9 @@
 
         playerManager.addEventListener(cast.framework.events.EventType.MEDIA_STATUS,
             event => {
+                
+                debugger;
+
                 console.log("on MEDIA_STATUS: " + event.mediaStatus.playerState);
                 if (event.mediaStatus.activeTrackIds) {
                     console.log("on MEDIA_STATUS: number of active track " + event.mediaStatus.activeTrackIds.length);
@@ -184,7 +196,9 @@
                 var errorCodeAsStr = "";
                 var errorCodeExtentionAsStr = "";
 
-                console.error("Error " + cast.framework.events.EventType.ERROR)
+                debugger;
+
+                addToLog("Error " + cast.framework.events.EventType.ERROR)
                 console.error("Error " + cast.framework.events.EventType.ERROR)
 
                 switch (event.detailedErrorCode) {
@@ -352,12 +366,14 @@
 
         // A hook on the manifest when downloaded and parsed
         playbackConfig.manifestHandler = manifest => {
+            debugger;
             console.log("manifestHandler: " + manifest);
             addToLog("manifestHandler: " + manifest)
             return manifest;
         };
         // A hook on the manifest request url
         playbackConfig.manifestRequestHandler = networkRequestInfo => {
+            debugger;
             console.log("manifestRequestHandler: " + networkRequestInfo.url);
             addToLog("manifestRequestHandler: " + networkRequestInfo.url)
 
@@ -368,6 +384,7 @@
         };
 
         context.addCustomMessageListener(channel, function(customEvent) {
+            debugger;
             clearLog();
             addToLog("addCustomMessageListener");
             var message = customEvent.data;
@@ -408,6 +425,7 @@
         }
 
         function postLogin(){
+            debugger;
             var xhttp = new XMLHttpRequest();
             xhttp.open("POST", "https://orangetv.orange.es/mob/api/rtv/v1/Login?client=json", true);
             xhttp.withCredentials = true
@@ -432,6 +450,7 @@
         }
 
         function tryPlay(){
+            debugger;
             addToLog("try play start")
             playerManager.play()
             addToLog("try play end")
