--- a/custom/index.html
+++ b/custom/index.html
@@ -147,7 +147,7 @@
 
                 if (request.media.entity && !request.media.contentId) {
 
-                    addToLog("----- LOAD ----- contentId " + request.media.contentId);
+                    //addToLog("----- LOAD ----- contentId " + request.media.contentId);
                     return getMediaByEntity(request.media.entity).then(
                         media => {
                         request.media.contentId = media.url;
@@ -158,6 +158,22 @@
         });
 
 
+
+        function setCustomMessage(){
+            addToLog("setCustomMessage")
+            console.log("setCustomMessage");
+
+            context.sendCustomMessage(channel, senderId, {
+                command: "playerLoaded"
+            });
+        }
+
+
+        context.addEventListener(cast.framework.system.EventType.SENDER_CONNECTED, event => {
+            console.log("on SENDER_DISCONNECTED: " + event.type);
+            addToLog("SENDER_CONNECTED")
+            addToLog("SENDER_CONNECTED" + event.senderId)
+        });
 
         const playbackConfig = new cast.framework.PlaybackConfig();
         playbackConfig.autoResumeDuration = 5;
@@ -362,7 +378,7 @@
                 var errorMsg = {type: 'playbackerror'};
                 errorMsg.errorCode = event.detailedErrorCode;
                 errorMsg.errorCodeAsStr = errorCodeAsStr + ". " + errorCodeExtentionAsStr;
-                context.sendCustomMessage(SQP_COMMUNICATION_CHANNEL_URN,undefined,errorMsg);
+                context.sendCustomMessage(channel, undefined, errorMsg);
 
                 // stop the player
                 if ( playerManager.getPlayerState() !== cast.framework.messages.PlayerState.IDLE ) {
@@ -423,7 +439,8 @@
         }
 
         function addToLog(message){
-            document.getElementById("log").innerHTML += "<br> >>>" + message
+            //document.getElementById("log").innerHTML += "<br> >>>" + message
+            console.log(message)
         }
 
         function loginWithParams(params){
