--- a/custom/index.html
+++ b/custom/index.html
@@ -102,7 +102,7 @@
                 console.log("PLAYER_LOAD_COMPLETE: ");
                 console.log("PLAYER_LOAD_COMPLETE: seekTime " + startTime);
                 playerManager.play();
-                playerManager.seek(startTime);
+                //playerManager.seek(startTime);
                 setCustomMessage();
 
 
