--- a/custom/index.html
+++ b/custom/index.html
@@ -100,8 +100,8 @@
 
 
                 console.log("PLAYER_LOAD_COMPLETE: ");
-                console.log("PLAYER_LOAD_COMPLETE: seekTime " + startTime);
                 playerManager.play();
+                //console.log("PLAYER_LOAD_COMPLETE: seekTime " + startTime);
                 //playerManager.seek(startTime);
                 setCustomMessage();
 
