print event media

--- a/custom/index.html
+++ b/custom/index.html
@@ -101,11 +101,11 @@
 
                 console.log("PLAYER_LOAD_COMPLETE: ");
                 playerManager.play();
-                
+
                 //console.log("PLAYER_LOAD_COMPLETE: seekTime " + startTime);
                 //playerManager.seek(startTime);
 
-                console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(oadRequest.media))
+                console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(event.media))
 
 
                 sendMessageToSender()
