--- a/custom/index.html
+++ b/custom/index.html
@@ -108,8 +108,9 @@
                 console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(event.media))
 
 
-                if (event.media.startAbsoluteData){
-                    playerManager.seek(event.media.startAbsoluteData);
+                if (event.media.startAbsoluteTime){
+                    console.log("PLAYER_LOAD_COMPLETE startTime: " + event.media.startAbsoluteTime);
+                    playerManager.seek(event.media.startAbsoluteTime);
                 }
 
                 sendMessageToSender()
