--- a/custom/index.html
+++ b/custom/index.html
@@ -455,7 +455,9 @@
     
     function checkSubtitles() {
         console.log("checkSubtitles");
-        console.log("checkSubtitles isVisible: " + shaka.text.SimpleTextDisplayer.isTextVisible());
+        let simpleText = shaka.text.SimpleTextDisplayer
+        //console.log("checkSubtitles isVisible: " + shaka.text.SimpleTextDisplayer.isTextVisible());
+        console.log("checkSubtitles finish");
     }
     </script>
 
