--- a/custom/index.html
+++ b/custom/index.html
@@ -459,6 +459,7 @@
         console.log("checkSubtitles check is visible");
         var direction = cue.direction;
         //console.log("checkSubtitles isVisible: " + shaka.text.SimpleTextDisplayer.isTextVisible());
+        console.log("checkSubtitles direction " + direction);
         console.log("checkSubtitles finish");
     }
     </script>
