Change cue background color

--- a/custom/index.html
+++ b/custom/index.html
@@ -460,6 +460,7 @@
         var direction = cue.direction;
         //console.log("checkSubtitles isVisible: " + shaka.text.SimpleTextDisplayer.isTextVisible());
         console.log("checkSubtitles direction " + direction);
+        shaka.text.Cue.backgroundColor = "#00FF00"
         console.log("checkSubtitles finish");
     }
     </script>
