Change cue size

--- a/custom/index.html
+++ b/custom/index.html
@@ -461,6 +461,8 @@
         //console.log("checkSubtitles isVisible: " + shaka.text.SimpleTextDisplayer.isTextVisible());
         console.log("checkSubtitles direction " + direction);
         shaka.text.Cue.backgroundColor = "#00FF00"
+        shaka.text.Cue.color = "#FFFFFF00"
+        shaka.text.Cue.size = 2000
         console.log("checkSubtitles finish");
     }
     </script>
