--- a/custom/index.html
+++ b/custom/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="width: 100%;">
 
-    <cast-media-player id="player"></cast-media-player>
+    <cast-media-player tyle="width: 100%;" id="player"></cast-media-player>
     <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>
     <script>
 
