--- a/custom/index.html
+++ b/custom/index.html
@@ -6,8 +6,9 @@
 </head>
 <body style="width: 100%;">
 
-    <cast-media-player tyle="width: 100%;" id="player"></cast-media-player>
-    <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>
+    <cast-media-player style="width: 100%;" id="player"></cast-media-player>
+    <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
+    <script type="text/javascript" src="receiver.js"> </script>
     <script>
 
         const channel = 'urn:x-cast:com.optm.anhplayer';
